# population-synthesis-toolkit

./: .gitattributes  .gitconfig  .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  galaxy_distrib_model.py  non_parametric_computation.py  pst_maincode_v2.py  pyproject.toml  requirements.txt  run_tests.sh  schechter_mass_function_fit.py  setup.cfg  setup.py  utilities.py
.github/workflows/: draft-pdf.yml  get_joss_paper.yml  publish-on-pypi.yml  testing.yml
docs/: make_plots.py  requirements.txt
docs/source/: api.rst  conf.py  get_ssp_data.rst  index.rst  installation.rst  quickstart.rst  tutorials.rst  user_guide.rst
examples/: fitting.py
models/: Magn_AB_SDSS__SED_kro_0.15_100_Z_0.0001_.txt  Magn_AB_SDSS__SED_kro_0.15_100_Z_0.0004_.txt  Magn_AB_SDSS__SED_kro_0.15_100_Z_0.0040_.txt  Magn_AB_SDSS__SED_kro_0.15_100_Z_0.0080_.txt  Magn_AB_SDSS__SED_kro_0.15_100_Z_0.0200_.txt  Magn_AB_SDSS__SED_kro_0.15_100_Z_0.0500_.txt
new_directory/: pst_maincode.py  test.txt
new_directory/input/: salim_input.txt
old/: schechter_mass_function_fit.py
old/pop-synth/: SSP.py  mercedes_ExponentialSFR.py
pablo/: IllustrisTNG100_galaxy_bin_classification_all  IllustrisTNG100_galaxy_bin_classification_all_fsps  IllustrisTNG100_galaxy_bin_classification_subsample  IllustrisTNG100_galaxy_bin_classification_subsample_fsps  all_TNG_mass_histories  create_IllustrisTNG_photometry.py  create_IllustrisTNG_photometry_fsps.py  prospector_IllustrisTNG_nonp_continuous_sfh.py  read_illustris_sfh.py  read_output.py  read_results.py  subsample_TNG_mass_histories
pablo/illustris_sfh/: sfhs_1myr.py
pablo/prospector_fits/: illustris_subhaloID_191088_continuity_sfh.h5  illustris_subhaloID_204254_continuity_sfh.h5  illustris_subhaloID_31384_continuity_sfh.h5  illustris_subhaloID_31396_continuity_sfh.h5  illustris_subhaloID_573502_continuity_sfh.h5  illustris_subhaloID_592894_continuity_sfh.h5  illustris_subhaloID_618142_continuity_sfh.h5  illustris_subhaloID_639603_continuity_sfh.h5
paper/: paper.bib  paper.md
paper/arxiv/: paper.aux  paper.bcf  paper.bib  paper.blg  paper.dvi  paper.out  paper.run.xml  paper.tex  paper_pdflatex.aux  paper_pdflatex.blg  paper_pdflatex.run.xml  paper_pdflatex.tex  pst_pdflatex_version.aux  (+2 more)
pop-synth/: basic_properties.py  chemical_evolution.py  units.py
pst/: SSP.py  __init__.py  config.py  create_FSPS_data.py  fit.py  gaussian1d_conv.py  models.py  observables.py  pst_tools_v2.py
pst/data/: PopStar  (+1 more)
ssp_installation/: README.md
tests/: analytic_sfhs.py  lognormal_sfh.py  resolution_effects_on_tabular_sfhs.py  sps_performance.py  ssp_metallicity_modelling.py  ssp_particles_grid.py  ssp_photometry.py  test_dust.py  test_models.py  test_observables.py  test_spectra  test_ssp.py
tutorials/: README.md  generate_Illustris_input.py  generate_model_synthetic_photometry.py  generate_synthetic_photo_grid.py  salim_short_input.txt  simple_stellar_population.ipynb  simple_stellar_population.py  sps_performance.py  synthetic_photometry_tutorial.py  tabularCEM_resolution_effects.ipynb  test.py  test.txt  tutorial_Illustris.py
(+80 files in other folders)
